Sonar issues solved.
Signed-off-by: Dennis Labordus <dennis.labordus@alliander.com>